# luhny.rs

./: Cargo.toml  README.markdown
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/modules/: cli.rs  luhny.rs  mod.rs  tests.rs
