[package]
name = "luhny"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface"]
description= "My Rustacean implementation of the Luhn algorithm for IMEI numbers."
homepage = "https://github.com/angeldollface/luhny-rs"
repository = "https://github.com/angeldollface/luhny-rs"
documentation = "https://github.com/angeldollface/luhny-rs"
readme = "README.markdown"
categories = ["imei", "luhn"]
exclude = [
  "/.github"
]

[dependencies]
cleasy = { git = "https://github.com/angeldollface/cleasy", version = "1.3.0" }
coutils = { git = "https://github.com/angeldollface/coutils", version = "1.0.0" }

[[bin]]
name = "luhny"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1