[package]
name = "luhny"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "My Rustacean implementation of the Luhn algorithm for IMEI numbers."
homepage = "https://github.com/angeldollface/luhny-rs"
repository = "https://github.com/angeldollface/luhny-rs"
documentation = "https://github.com/angeldollface/luhny-rs"
readme = "README.markdown"
categories = ["imei", "luhn"]
exclude = [
  "/.github"
]

[dependencies]
cliply = "0.1.0"
coutils = "1.4.0"

[[bin]]
name = "luhny"
path = "src/main.rs"

[profile.release]
strip = true
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1